fix: correct success object return to TransactionsGetResponse in Get swagger spec
